--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.16.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
