--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0"
+    "express-session": "^1.18.1",
+    "mongoose": "^8.16.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "session": "^0.1.0"
   },
-  "devDependencies": {},
   "description": ""
 }
